--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,10 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:text="@string/question"
+        android:textColor="@color/colorText"
         android:textSize="40sp"
         android:textAlignment="center"
+        android:background="@color/colorQuestion"
         />
     <TextView
         android:id="@id/flashcard_answer"
@@ -19,7 +21,9 @@
         android:layout_height="200dp"
         android:visibility="invisible"
         android:text="@string/answer"
+        android:textColor="@color/colorText"
         android:textSize="40sp"
         android:textAlignment="center"
+        android:background="@color/colorAnswer"
         />
 </RelativeLayout>
